project/stage/semantic_tests/accept/all_type_decls_and_assign.ul
void main() {
    string s1;
    string s2;
    string s3;

    int a;
    int b;
    int c;

    float f1;
    float f2;
    float f3;

    char c1;
    char c2;
    char c3;
    boolean bool;

    string [4] strArr;
    int [4] intArr;
    float [4] floArr;
    char [4] charArr;
    boolean [4] boolArr;

    s1 = s2;
    s3 = "string";
    s2 = gimmeString();
    
    a = b;
    a = 1 - gimmeInt();
    c = 1 + 1 + 1 + b + c;

    f1 = 0.1 + f2;
    f2 = gimmeFloat() + f3;

    c1 = c3 + 'c' + gimmeChar();

    bool = true;
    bool = false;
    bool = bool;
    bool = gimmeBool();
}

int gimmeInt() {
    return 0;
}

string gimmeString() {
    return " ";
}

float gimmeFloat() {
    return 0.0;
}

char gimmeChar() {
    return 'c';
}

boolean gimmeBool() {
    boolean b;
    return b;
}
