project/stage/semantic_tests/reject/string_assign_char.ul
void main() {
    string [1] arr;
    arr[0] = getChar();
}

char getChar() {
    return 'c';
}
